--- a/stylesheet000.css
+++ b/stylesheet000.css
@@ -68,6 +68,7 @@ font-weight:bold;
 font-size:60px;
 padding-top:150px;
 text-shadow:black 3px 3px 3px;
+  font-color:darkgreen;
 }
 .top-wrapper p{
  font-weight:bold;
