--- a/stylesheet000.css
+++ b/stylesheet000.css
@@ -52,6 +52,7 @@ body{
   padding-right:15px;
   padding-top:15px;
   float:right;
+  color:white;
   text-shadow:#339933 3px 3px 3px;
 }
 .top-wrapper{
@@ -68,7 +69,7 @@ font-weight:bold;
 font-size:60px;
 padding-top:150px;
 text-shadow:black 3px 3px 3px;
-  font-color:darkgreen;
+ color:darkgreen;
 }
 .top-wrapper p{
  font-weight:bold;
