--- a/stylesheet000.css
+++ b/stylesheet000.css
@@ -25,6 +25,11 @@ body{
  a{
  color:black;
    }
+
+a:hover{
+  color:green;
+}
+
 .header{
   width:100%;
   height:110px;
@@ -72,7 +77,7 @@ width:100%;
 font-weight:bold;
 font-size:60px;
 padding-top:150px;
-text-shadow:black 3px 3px 3px;
+text-shadow:black 4px 4px 4px;
 }
 .top-wrapper p{
  font-weight:bold;
