--- a/stylesheet000.css
+++ b/stylesheet000.css
@@ -69,7 +69,7 @@ margin:0px 0px;
 background-image:url("https://github.com/hiro-eng/fotomb/blob/main/cropELFADSC08904.jpg?raw=true");
 background-size:cover;
 text-align:center;
-color:white;
+color:green;
 height:700px;
 width:100%;
 }
@@ -98,31 +98,31 @@ text-align:center;
 list-style:none;
 }
 .box1{
-font-size:22px;
+font-size:24px;
 width:800px;
 padding:10px;
 margin:10px auto;
 }
 .box2{
-font-size:22px;
+font-size:24px;
 width:800px;
 padding:10px;
 margin:10px auto;
 }
 .box3{
-font-size:22px;
+font-size:24px;
 width:800px;
 padding:10px;
 margin:10px auto;
 }
 .box4{
-font-size:22px;
+font-size:24px;
 width:800px;
 padding:10px;
 margin:10px auto;
 }
 .box5{
-font-size:22px;
+font-size:24px;
 width:800px;
 padding:10px;
 margin:10px auto;
