--- a/stylesheet000.css
+++ b/stylesheet000.css
@@ -69,7 +69,7 @@ margin:0px 0px;
 background-image:url("https://github.com/hiro-eng/fotomb/blob/main/cropELFADSC08904.jpg?raw=true");
 background-size:cover;
 text-align:center;
-color:green;
+color:white;
 height:700px;
 width:100%;
 }
